# clientele.rs

./: CHANGES.md  Cargo.toml  README.md
lib/clientele/: Cargo.toml
lib/clientele/src/: crates.rs  envs.rs  features.rs  lib.rs  options.rs  subcommands.rs  sysexits.rs
lib/clientele/tests/: subcommands_find.rs  subcommands_list.rs  subcommands_shared.rs
