# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.3.5"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.81"
description = "Clientele packages `clap`, `camino`, `dotenvy`, `wild`, `argfile`, and `getenv` into one dependency."
#documentation = "https://docs.rs/clientele/"
readme = true
homepage = "https://clientele.rs"
repository = "https://github.com/dryrust/clientele.rs"
license = "Unlicense"
keywords = ["cli", "clap"]
categories = ["command-line-interface", "no-std"]
publish = true

[workspace.dependencies]
clientele = { path = "lib/clientele" }

[patch.crates-io]
clientele = { path = "lib/clientele" }
